# weather-twin

./: .gitignore  README.md  compose.yaml  dev.sh  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: push-tests.yml
backend/: .dockerignore  .gitignore  Dockerfile  go.mod  main.go  main.py  match.go  pyproject.toml  schemas.py  types.go
backend/cities/: inference.py  metadata_fetcher.py  models.py  pinecone.py  processing.py  result_meta_fetcher.py  router.py  schemas.py  util.py  websocket.py
backend/cities/artifacts/: autoencoder_cities.pth  my_minmax_scaler.pkl
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  server.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/matches/: route.ts
frontend/src/components/weather/: animated-background.tsx  city-info.tsx  climate-data.tsx  map-component.tsx  minimal-map.tsx  search-input.tsx  share-menu.tsx  weather-stats.tsx
frontend/src/lib/: types.ts  url.ts  utils.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/andres/: loadingDiv.tsx  mainDiv.tsx  mainForm.tsx  resultsDiv.tsx
src/functions/: isInUS.ts
weather-twin-backend/: package-lock.json  package.json  serverless.yml
weather-twin-backend/src/: cities.js
